--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="../css/style.css"></a>
+    <link rel="stylesheet" href="./css/style.css"></a>
 </head>
 <body>
     <div class="wrapper">
     <div class="sidebar">
-        <a href="#"><img src="../assets/logo1.png" alt="logo" class="logo">
+        <a href="#"><img src="./assets/logo1.png" alt="logo" class="logo">
         <h3 style="font-size: 1.5vw;">Tracy</h3></a>
         <h6 style="font-size: 0.8vw;">IS student</h6>
         <ul>
         <li><a href="./html/about.html">About</a></li>
         <li><a href="./html/work.html">Work</a></li>
-        <li><a href="../Final/html/contact.html">Contact</a></li>
+        <li><a href="./Final/html/contact.html">Contact</a></li>
         </ul>
     </div>
 </div>
