--- a/html/work.html
+++ b/html/work.html
@@ -24,8 +24,8 @@
     <div class="container">
         <div class="image" id="project1"><img src="../assets/project1.png"></div>
         <div class="image" id="project2"><img src="../assets/mangkas.png"></div>
-        <div class="image" id="project3"><img src="../assets/mangkas.png"></div>
-
+<!--         <div class="image" id="project3"><img src="../assets/mangkas.png"></div>
+ -->
 
 
         <div class="project">
