--- a/html/about.html
+++ b/html/about.html
@@ -46,7 +46,7 @@
       <div class="contents active" id="skills">
         <ul>
           <li><span>UI/UX</span><br>Figma</li>
-          <li><span>Web Development</span><br>html | css | JScript | VS Code</li>
+          <li><span>Web Development</span><br>html | css | JScript | PHP | Laravel | VS Code</li>
           <li><span>Web app Development</span><br>Mendix</li>
           <li><span>app Development</span><br>Java </li>
           <li><span>Database</span><br> SQL | SQL server Management Studio </li>
@@ -78,6 +78,7 @@
       <div class="contents" id="Experience">
         <ul>
           <li><span>2023 - 2024</span><br>Information Systems Project Member (ISPM)</li>
+            <li> <p> Helped in creating a regristration website for the organization </p></li>
         </ul>
       </div>
 
