--- a/html/work.html
+++ b/html/work.html
@@ -46,11 +46,11 @@
                     <div class="line"></a>
                 </li>
 
-                <a href="../html/project3.html">
+<!--                 <a href="../html/project3.html">
                     <li onmouseover="showImage('project3')" onmouseout="hideImage('project3')">
                         Mangkas <br>
                         <div class="line"></a>
-                    </li>
+                    </li> -->
                
             </div>
         </div>
